--- a/style.css
+++ b/style.css
@@ -1,4 +1,60 @@
 * {
+    margin: 0;
+    padding: 0;
     background-color: black;
     color: white;
+}
+
+html, body {
+    height: 100%;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    }
+
+.navbar {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+}
+
+.btnDiv {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+button {
+    padding: 5px;
+    margin: 10px;
+    background-color: grey;
+    border-radius: 2px;
+}
+
+.container {
+    --size: 4;
+    height: 800px;
+    width: 800px;
+    display: grid;
+    grid-template-columns: repeat(var(--size), 1fr);
+    grid-template-rows: repeat(var(--size), 1fr);
+    gap: 3px;
+    padding: 3px;
+}
+
+.cell {
+    background-color: grey;
+    border-radius: 0px;
 }
